--- a/index.html
+++ b/index.html
@@ -5,77 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>AI Game Generator - プロンプトでゲームを生成</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>AIゲームジェネレーター - しつもんでゲームをつくろう</title>
+    <link rel="stylesheet" href="css/style-quiz.css">
 </head>
 <body>
     <!-- ヘッダー -->
     <header class="header">
         <div class="container">
-            <h1 class="logo">🎮 AI Game Generator</h1>
-            <p class="tagline">プロンプトで簡単にゲームを生成</p>
+            <h1 class="logo">🎮 AI<ruby>ゲーム<rt>げーむ</rt></ruby>ジェネレーター</h1>
+            <p class="tagline"><ruby>しつもん<rt>質問</rt></ruby>に<ruby>こた<rt>答</rt></ruby>えて<ruby>じぶん<rt>自分</rt></ruby>だけの<ruby>げーむ<rt>ゲーム</rt></ruby>をつくろう！</p>
         </div>
     </header>
 
     <!-- メインコンテンツ -->
     <main class="container">
-        <!-- プロンプト入力セクション -->
-        <section class="prompt-section">
-            <div class="card">
-                <h2>✨ ゲームを生成しよう</h2>
-                <p class="description">
-                    作りたいゲームを日本語で説明してください。AIが自動的にゲームを生成します！
-                </p>
+        <!-- クイズセクション -->
+        <section id="quizSection" class="quiz-section">
+            <!-- プログレスバー -->
+            <div class="progress-container">
+                <div class="progress-text">
+                    <span id="progressText">ステップ <span id="currentStep">1</span> / 5</span>
+                </div>
+                <div class="progress-bar">
+                    <div id="progressFill" class="progress-fill" style="width: 20%;"></div>
+                </div>
+            </div>
 
-                <!-- プロンプト入力 -->
-                <div class="input-group">
-                    <label for="promptInput">ゲームの説明</label>
-                    <textarea 
-                        id="promptInput" 
-                        placeholder="例: 宇宙船を操作して隕石を避けるゲーム"
-                        rows="3"
-                    ></textarea>
+            <!-- 質問カード -->
+            <div class="quiz-card">
+                <h2 id="questionTitle" class="question-title">あなたの<ruby>す<rt>好</rt></ruby>きなものは？</h2>
+                
+                <!-- 選択肢コンテナ -->
+                <div id="optionsContainer" class="options-container">
+                    <!-- JavaScriptで動的に生成 -->
                 </div>
 
-                <!-- サンプルプロンプト -->
-                <div class="sample-prompts">
-                    <p class="sample-label">💡 サンプル（8種類のゲーム）:</p>
-                    <button class="sample-btn" data-prompt="宇宙船を操作して隕石を避けるゲーム">
-                        🚀 避けゲー
-                    </button>
-                    <button class="sample-btn" data-prompt="リンゴをキャッチするゲーム">
-                        🍎 キャッチゲー
-                    </button>
-                    <button class="sample-btn" data-prompt="敵を撃って倒すシューティングゲーム">
-                        💣 シューティング
-                    </button>
-                    <button class="sample-btn" data-prompt="神経衰弱ゲーム">
-                        🃏 神経衰弱
-                    </button>
-                    <button class="sample-btn" data-prompt="ブロック崩しゲーム">
-                        🧱 ブロック崩し
-                    </button>
-                    <button class="sample-btn" data-prompt="スライドパズルゲーム">
-                        🧩 パズル
-                    </button>
-                    <button class="sample-btn" data-prompt="クリッカーゲーム">
-                        👆 クリッカー
-                    </button>
-                    <button class="sample-btn" data-prompt="ジャンプゲーム">
-                        🐦 ジャンプ
-                    </button>
-                </div>
-
-                <!-- 生成ボタン -->
-                <button id="generateBtn" class="generate-btn">
-                    <span class="btn-text">🎮 ゲームを生成</span>
-                    <span class="btn-loading" style="display: none;">
-                        <span class="spinner"></span> 生成中...
-                    </span>
+                <!-- 戻るボタン -->
+                <button id="backBtn" class="btn-back" style="display: none;">
+                    ← <ruby>もど<rt>戻</rt></ruby>る
                 </button>
+            </div>
+        </section>
 
-                <!-- エラー表示 -->
-                <div id="errorMessage" class="error-message" style="display: none;"></div>
+        <!-- 結果表示セクション -->
+        <section id="resultSection" class="result-section" style="display: none;">
+            <div class="result-card">
+                <h2 class="result-title">🎉 あなただけのゲームができたよ！</h2>
+                
+                <div class="result-summary">
+                    <div class="summary-item">
+                        <span class="summary-label">ゲーム:</span>
+                        <span id="resultGame" class="summary-value"></span>
+                    </div>
+                    <div class="summary-item">
+                        <span class="summary-label"><ruby>いろ<rt>色</rt></ruby>:</span>
+                        <span id="resultColor" class="summary-value"></span>
+                    </div>
+                    <div class="summary-item">
+                        <span class="summary-label"><ruby>ばしょ<rt>場所</rt></ruby>:</span>
+                        <span id="resultPlace" class="summary-value"></span>
+                    </div>
+                    <div class="summary-item">
+                        <span class="summary-label">アイテム:</span>
+                        <span id="resultItem" class="summary-value"></span>
+                    </div>
+                    <div class="summary-item">
+                        <span class="summary-label">レベル:</span>
+                        <span id="resultLevel" class="summary-value"></span>
+                    </div>
+                </div>
+
+                <button id="playBtn" class="btn-play">
+                    🎮 さあ、<ruby>あそ<rt>遊</rt></ruby>んでみよう！
+                </button>
             </div>
         </section>
 
@@ -84,10 +86,10 @@
             <div class="card">
                 <div class="game-header">
                     <div>
-                        <h2 id="gameTitle">🎉 生成されたゲーム</h2>
+                        <h2 id="gameTitle">🎉 <ruby>せいせい<rt>生成</rt></ruby>されたゲーム</h2>
                         <p id="gameDescription" class="game-description"></p>
                     </div>
-                    <button id="newGameBtn" class="btn-secondary">🔄 新しいゲームを生成</button>
+                    <button id="newGameBtn" class="btn-secondary">🔄 <ruby>あたら<rt>新</rt></ruby>しいゲームを<ruby>つく<rt>作</rt></ruby>る</button>
                 </div>
 
                 <!-- ゲームキャンバス -->
@@ -97,11 +99,12 @@
 
                 <!-- 操作説明 -->
                 <div class="game-controls">
-                    <h3>🎮 操作方法</h3>
+                    <h3>🎮 <ruby>そうさ<rt>操作</rt></ruby>ほうほう</h3>
                     <ul>
-                        <li><strong>矢印キー（←→）</strong> または <strong>A/D</strong>: 左右に移動</li>
-                        <li><strong>スペースキー</strong>: 発射（シューティングゲームの場合）</li>
-                        <li><strong>R キー</strong>: ゲームをリスタート</li>
+                        <li><strong>スマホ</strong>: <ruby>がめん<rt>画面</rt></ruby>の<ruby>ひだり<rt>左</rt></ruby>/<ruby>みぎ<rt>右</rt></ruby>をタップで<ruby>いどう<rt>移動</rt></ruby></li>
+                        <li><strong>パソコン</strong>: <ruby>やじるし<rt>矢印</rt></ruby>キー（←→）で<ruby>いどう<rt>移動</rt></ruby></li>
+                        <li><strong>ジャンプ/シュート</strong>: <ruby>がめん<rt>画面</rt></ruby>をタップ または スペースキー</li>
+                        <li><strong>R キー</strong>: リスタート</li>
                     </ul>
                 </div>
 
@@ -113,23 +116,13 @@
                 </div>
             </div>
         </section>
-
-        <!-- ゲームギャラリー -->
-        <section id="gallerySection" class="gallery-section">
-            <div class="card">
-                <h2>🎨 生成したゲーム一覧</h2>
-                <div id="gameGallery" class="game-gallery">
-                    <p class="no-games">まだゲームが生成されていません</p>
-                </div>
-            </div>
-        </section>
     </main>
 
     <!-- フッター -->
     <footer class="footer">
-        <p>APIキー不要で完全無料 🎮 | 瞬時にゲームを生成</p>
+        <p>APIキー<ruby>ふよう<rt>不要</rt></ruby>で<ruby>かんぜん<rt>完全</rt></ruby><ruby>むりょう<rt>無料</rt></ruby> 🎮 | <ruby>しゅんじ<rt>瞬時</rt></ruby>にゲームを<ruby>せいせい<rt>生成</rt></ruby></p>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="js/app-quiz.js"></script>
 </body>
 </html>
