--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>AI Game Generator - プロンプトでゲームを生成</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -37,18 +39,30 @@
 
                 <!-- サンプルプロンプト -->
                 <div class="sample-prompts">
-                    <p class="sample-label">💡 サンプル:</p>
+                    <p class="sample-label">💡 サンプル（8種類のゲーム）:</p>
                     <button class="sample-btn" data-prompt="宇宙船を操作して隕石を避けるゲーム">
-                        🚀 宇宙船ゲーム
+                        🚀 避けゲー
                     </button>
                     <button class="sample-btn" data-prompt="リンゴをキャッチするゲーム">
-                        🍎 キャッチゲーム
+                        🍎 キャッチゲー
                     </button>
                     <button class="sample-btn" data-prompt="敵を撃って倒すシューティングゲーム">
                         💣 シューティング
                     </button>
-                    <button class="sample-btn" data-prompt="森の中で速く走るランゲーム">
-                        🏃 ランゲーム
+                    <button class="sample-btn" data-prompt="神経衰弱ゲーム">
+                        🃏 神経衰弱
+                    </button>
+                    <button class="sample-btn" data-prompt="ブロック崩しゲーム">
+                        🧱 ブロック崩し
+                    </button>
+                    <button class="sample-btn" data-prompt="スライドパズルゲーム">
+                        🧩 パズル
+                    </button>
+                    <button class="sample-btn" data-prompt="クリッカーゲーム">
+                        👆 クリッカー
+                    </button>
+                    <button class="sample-btn" data-prompt="ジャンプゲーム">
+                        🐦 ジャンプ
                     </button>
                 </div>
 
