--- a/public/index-quiz.html
+++ b/public/index-quiz.html
@@ -24,16 +24,17 @@
             <!-- プログレスバー -->
             <div class="progress-container">
                 <div class="progress-text">
-                    <span id="progressText">ステップ <span id="currentStep">1</span> / 5</span>
+                    <span id="progressText">ステップ <span id="currentStep">1</span> / 4</span>
                 </div>
                 <div class="progress-bar">
-                    <div id="progressFill" class="progress-fill" style="width: 20%;"></div>
+                    <div id="progressFill" class="progress-fill" style="width: 25%;"></div>
                 </div>
             </div>
 
             <!-- 質問カード -->
             <div class="quiz-card">
-                <h2 id="questionTitle" class="question-title">あなたの<ruby>す<rt>好</rt></ruby>きなものは？</h2>
+                <h2 id="questionTitle" class="question-title"><ruby>ふだん<rt>普段</rt></ruby>どんなゲームが<ruby>す<rt>好</rt></ruby>き？</h2>
+                <p id="questionSubtitle" class="question-subtitle"><ruby>じゆう<rt>自由</rt></ruby>に<ruby>か<rt>書</rt></ruby>いてね！</p>
                 
                 <!-- 選択肢コンテナ -->
                 <div id="optionsContainer" class="options-container">
@@ -53,6 +54,10 @@
                 <h2 class="result-title">🎉 あなただけのゲームができたよ！</h2>
                 
                 <div class="result-summary">
+                    <div class="summary-item">
+                        <span class="summary-label"><ruby>にゅうりょく<rt>入力</rt></ruby>:</span>
+                        <span id="resultInput" class="summary-value"></span>
+                    </div>
                     <div class="summary-item">
                         <span class="summary-label">ゲーム:</span>
                         <span id="resultGame" class="summary-value"></span>
@@ -123,6 +128,6 @@
         <p>APIキー<ruby>ふよう<rt>不要</rt></ruby>で<ruby>かんぜん<rt>完全</rt></ruby><ruby>むりょう<rt>無料</rt></ruby> 🎮 | <ruby>しゅんじ<rt>瞬時</rt></ruby>にゲームを<ruby>せいせい<rt>生成</rt></ruby></p>
     </footer>
 
-    <script src="js/app-quiz.js"></script>
+    <script src="js/app-quiz-v2.js"></script>
 </body>
 </html>
