--- a/public/index-quiz.html
+++ b/public/index-quiz.html
@@ -33,8 +33,7 @@
 
             <!-- 質問カード -->
             <div class="quiz-card">
-                <h2 id="questionTitle" class="question-title"><ruby>ふだん<rt>普段</rt></ruby>どんなゲームが<ruby>す<rt>好</rt></ruby>き？</h2>
-                <p id="questionSubtitle" class="question-subtitle"><ruby>じゆう<rt>自由</rt></ruby>に<ruby>か<rt>書</rt></ruby>いてね！</p>
+                <h2 id="questionTitle" class="question-title">どんなゲームで<ruby>あそ<rt>遊</rt></ruby>びたい？</h2>
                 
                 <!-- 選択肢コンテナ -->
                 <div id="optionsContainer" class="options-container">
@@ -55,10 +54,6 @@
                 
                 <div class="result-summary">
                     <div class="summary-item">
-                        <span class="summary-label"><ruby>にゅうりょく<rt>入力</rt></ruby>:</span>
-                        <span id="resultInput" class="summary-value"></span>
-                    </div>
-                    <div class="summary-item">
                         <span class="summary-label">ゲーム:</span>
                         <span id="resultGame" class="summary-value"></span>
                     </div>
@@ -69,10 +64,6 @@
                     <div class="summary-item">
                         <span class="summary-label"><ruby>ばしょ<rt>場所</rt></ruby>:</span>
                         <span id="resultPlace" class="summary-value"></span>
-                    </div>
-                    <div class="summary-item">
-                        <span class="summary-label">アイテム:</span>
-                        <span id="resultItem" class="summary-value"></span>
                     </div>
                     <div class="summary-item">
                         <span class="summary-label">レベル:</span>
@@ -128,6 +119,6 @@
         <p>APIキー<ruby>ふよう<rt>不要</rt></ruby>で<ruby>かんぜん<rt>完全</rt></ruby><ruby>むりょう<rt>無料</rt></ruby> 🎮 | <ruby>しゅんじ<rt>瞬時</rt></ruby>にゲームを<ruby>せいせい<rt>生成</rt></ruby></p>
     </footer>
 
-    <script src="js/app-quiz-v2.js"></script>
+    <script src="js/app-quiz-select-only.js"></script>
 </body>
 </html>
