--- a/public/index-quiz.html
+++ b/public/index-quiz.html
@@ -119,6 +119,6 @@
         <p>APIキー<ruby>ふよう<rt>不要</rt></ruby>で<ruby>かんぜん<rt>完全</rt></ruby><ruby>むりょう<rt>無料</rt></ruby> 🎮 | <ruby>しゅんじ<rt>瞬時</rt></ruby>にゲームを<ruby>せいせい<rt>生成</rt></ruby></p>
     </footer>
 
-    <script src="js/app-quiz-select-only.js"></script>
+    <script src="js/app-quiz.js"></script>
 </body>
 </html>
