--- a/public/index.html
+++ b/public/index.html
@@ -22,53 +22,53 @@
         <!-- プロンプト入力セクション -->
         <section class="prompt-section">
             <div class="card">
-                <h2>✨ ゲームを生成しよう</h2>
+                <h2>✨ げーむをせいせいしよう</h2>
 
                 <!-- ゲームの種類 -->
                 <div class="selection-group">
-                    <h3>ゲームの<ruby>しゅるい<rt>種類</rt></ruby>を<ruby>えら<rt>選</rt></ruby>んでね</h3>
+                    <h3>げーむのしゅるいをえらんでね</h3>
                     <div class="button-grid">
-                        <button class="select-btn" data-type="gameType" data-value="avoid">🏃 <ruby>に<rt>逃</rt></ruby>げる</button>
-                        <button class="select-btn" data-type="gameType" data-value="catch">🍎 <ruby>あつ<rt>集</rt></ruby>める</button>
-                        <button class="select-btn" data-type="gameType" data-value="shoot">💣 シューティング</button>
-                        <button class="select-btn" data-type="gameType" data-value="memory">🃏 <ruby>しんけいすいじゃく<rt>神経衰弱</rt></ruby></button>
-                        <button class="select-btn" data-type="gameType" data-value="breakout">🧱 ブロック<ruby>くず<rt>崩</rt></ruby>し</button>
-                        <button class="select-btn" data-type="gameType" data-value="puzzle">🧩 パズル</button>
-                        <button class="select-btn" data-type="gameType" data-value="clicker">👆 クリッカー</button>
-                        <button class="select-btn" data-type="gameType" data-value="jump">🐦 ジャンプ</button>
+                        <button class="select-btn" data-type="gameType" data-value="avoid">🏃 にげる</button>
+                        <button class="select-btn" data-type="gameType" data-value="catch">🍎 あつめる</button>
+                        <button class="select-btn" data-type="gameType" data-value="shoot">💣 しゅーてぃんぐ</button>
+                        <button class="select-btn" data-type="gameType" data-value="memory">🃏 しんけいすいじゃく</button>
+                        <button class="select-btn" data-type="gameType" data-value="breakout">🧱 ぶろっくくずし</button>
+                        <button class="select-btn" data-type="gameType" data-value="puzzle">🧩 ぱずる</button>
+                        <button class="select-btn" data-type="gameType" data-value="clicker">👆 くりっかー</button>
+                        <button class="select-btn" data-type="gameType" data-value="jump">🐦 じゃんぷ</button>
                     </div>
                 </div>
 
                 <!-- 色の選択 -->
                 <div class="selection-group">
-                    <h3><ruby>す<rt>好</rt></ruby>きな<ruby>いろ<rt>色</rt></ruby>を<ruby>えら<rt>選</rt></ruby>んでね</h3>
+                    <h3>すきないろをえらんでね</h3>
                     <div class="button-grid">
-                        <button class="select-btn color-btn" data-type="color" data-value="red" style="background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);">🔴 <ruby>あか<rt>赤</rt></ruby></button>
-                        <button class="select-btn color-btn" data-type="color" data-value="blue" style="background: linear-gradient(135deg, #4d96ff 0%, #6c5ce7 100%);">🔵 <ruby>あお<rt>青</rt></ruby></button>
-                        <button class="select-btn color-btn" data-type="color" data-value="green" style="background: linear-gradient(135deg, #51cf66 0%, #37b24d 100%);">🟢 <ruby>みどり<rt>緑</rt></ruby></button>
-                        <button class="select-btn color-btn" data-type="color" data-value="yellow" style="background: linear-gradient(135deg, #ffd93d 0%, #f9ca24 100%);">🟡 <ruby>きいろ<rt>黄色</rt></ruby></button>
-                        <button class="select-btn color-btn" data-type="color" data-value="purple" style="background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);">🟣 <ruby>むらさき<rt>紫</rt></ruby></button>
-                        <button class="select-btn color-btn" data-type="color" data-value="pink" style="background: linear-gradient(135deg, #fd79a8 0%, #e84393 100%);">🩷 ピンク</button>
-                        <button class="select-btn color-btn" data-type="color" data-value="orange" style="background: linear-gradient(135deg, #ff9f43 0%, #ee5a24 100%);">🟠 オレンジ</button>
-                        <button class="select-btn color-btn" data-type="color" data-value="white" style="background: linear-gradient(135deg, #f1f2f6 0%, #dfe6e9 100%); color: #2d3436;">⚪ <ruby>しろ<rt>白</rt></ruby></button>
+                        <button class="select-btn color-btn" data-type="color" data-value="red" style="background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);">🔴 あか</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="blue" style="background: linear-gradient(135deg, #4d96ff 0%, #6c5ce7 100%);">🔵 あお</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="green" style="background: linear-gradient(135deg, #51cf66 0%, #37b24d 100%);">🟢 みどり</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="yellow" style="background: linear-gradient(135deg, #ffd93d 0%, #f9ca24 100%);">🟡 きいろ</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="purple" style="background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);">🟣 むらさき</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="pink" style="background: linear-gradient(135deg, #fd79a8 0%, #e84393 100%);">🩷 ぴんく</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="orange" style="background: linear-gradient(135deg, #ff9f43 0%, #ee5a24 100%);">🟠 おれんじ</button>
+                        <button class="select-btn color-btn" data-type="color" data-value="white" style="background: linear-gradient(135deg, #f1f2f6 0%, #dfe6e9 100%); color: #2d3436;">⚪ しろ</button>
                     </div>
                 </div>
 
                 <!-- ステージの選択 -->
                 <div class="selection-group">
-                    <h3>ステージを<ruby>えら<rt>選</rt></ruby>んでね</h3>
+                    <h3>すてーじをえらんでね</h3>
                     <div class="button-grid">
-                        <button class="select-btn" data-type="place" data-value="space">🚀 <ruby>うちゅう<rt>宇宙</rt></ruby></button>
-                        <button class="select-btn" data-type="place" data-value="ocean">🌊 <ruby>うみ<rt>海</rt></ruby></button>
-                        <button class="select-btn" data-type="place" data-value="forest">🌲 <ruby>もり<rt>森</rt></ruby></button>
-                        <button class="select-btn" data-type="place" data-value="sunset">🌅 <ruby>ゆうや<rt>夕焼</rt></ruby>け</button>
-                        <button class="select-btn" data-type="place" data-value="night">🌙 <ruby>よる<rt>夜</rt></ruby></button>
+                        <button class="select-btn" data-type="place" data-value="space">🚀 うちゅう</button>
+                        <button class="select-btn" data-type="place" data-value="ocean">🌊 うみ</button>
+                        <button class="select-btn" data-type="place" data-value="forest">🌲 もり</button>
+                        <button class="select-btn" data-type="place" data-value="sunset">🌅 ゆうやけ</button>
+                        <button class="select-btn" data-type="place" data-value="night">🌙 よる</button>
                     </div>
                 </div>
 
                 <!-- 難易度の選択 -->
                 <div class="selection-group">
-                    <h3><ruby>むずか<rt>難</rt></ruby>しさを<ruby>えら<rt>選</rt></ruby>んでね</h3>
+                    <h3>むずかしさをえらんでね</h3>
                     <div class="button-grid">
                         <button class="select-btn" data-type="difficulty" data-value="easy">😊 かんたん</button>
                         <button class="select-btn" data-type="difficulty" data-value="normal">😐 ふつう</button>
@@ -78,9 +78,9 @@
 
                 <!-- 生成ボタン -->
                 <button id="generateBtn" class="generate-btn-big">
-                    <span class="btn-text">🎮 ゲームを<ruby>せいせい<rt>生成</rt></ruby>！</span>
+                    <span class="btn-text">🎮 げーむを生成！</span>
                     <span class="btn-loading" style="display: none;">
-                        <span class="spinner"></span> <ruby>せいせい<rt>生成</rt></ruby><ruby>ちゅう<rt>中</rt></ruby>...
+                        <span class="spinner"></span> 生成ちゅう...
                     </span>
                 </button>
 
@@ -97,7 +97,7 @@
                         <h2 id="gameTitle">🎉 生成されたゲーム</h2>
                         <p id="gameDescription" class="game-description"></p>
                     </div>
-                    <button id="newGameBtn" class="btn-secondary">🔄 新しいゲームを生成</button>
+                    <button id="newGameBtn" class="btn-secondary">🔄 あたらしいげーむを生成</button>
                 </div>
 
                 <!-- ゲームキャンバス -->
@@ -107,11 +107,11 @@
 
                 <!-- 操作説明 -->
                 <div class="game-controls">
-                    <h3>🎮 操作方法</h3>
+                    <h3>🎮 そうさほうほう</h3>
                     <ul>
-                        <li><strong>スマホ</strong>: 画面の左/右をタップで移動</li>
-                        <li><strong>パソコン</strong>: 矢印キー（←→）で移動</li>
-                        <li><strong>ジャンプ/シュート</strong>: 画面をタップ または スペースキー</li>
+                        <li><strong>スマホ</strong>: がめんのひだり/みぎをタップでいどう</li>
+                        <li><strong>パソコン</strong>: やじるしキー（←→）でいどう</li>
+                        <li><strong>ジャンプ/シュート</strong>: がめんをタップ または スペースキー</li>
                         <li><strong>R キー</strong>: リスタート</li>
                     </ul>
                 </div>
@@ -128,7 +128,7 @@
         <!-- ゲームギャラリー -->
         <section id="gallerySection" class="gallery-section">
             <div class="card">
-                <h2>🎨 生成したゲーム一覧</h2>
+                <h2>🎨 生成したゲームいちらん</h2>
                 <div id="gameGallery" class="game-gallery">
                     <p class="no-games">まだゲームが生成されていません</p>
                 </div>
@@ -138,7 +138,7 @@
 
     <!-- フッター -->
     <footer class="footer">
-        <p>APIキー不要で完全無料 🎮 | 瞬時にゲームを生成</p>
+        <p>APIキーふようでかんぜんむりょう 🎮 | しゅんじにゲームを生成</p>
     </footer>
 
     <script src="js/app.js"></script>
